code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_33.wast
(assert_invalid
  (module (table funcref (elem 0 0)))
  "unknown function"
)